<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="205dp"
        android:contentDescription="@string/str_scrollview_desc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/id_ll_todo_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border_black"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1"
                        android:background="@drawable/border_black"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".1"
                            android:gravity="center"
                            android:text="Status"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".9"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".1"
                            android:layout_marginStart="50dp"
                            android:gravity="center_vertical"
                            android:text="Tasks"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/id_btn_todo_add"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:translationX="60dp"
                    android:background="@drawable/add"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:contentDescription="@string/str_add_img_desc"
                    app:srcCompat="@drawable/add" />

                <ImageButton
                    android:id="@+id/id_btn_todo_save"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:translationX="-40dp"
                    android:background="@drawable/add"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:contentDescription="@string/str_save_img_desc"
                    app:srcCompat="@drawable/save" />

                <ImageButton
                    android:id="@+id/id_btn_todo_cancel"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:translationX="-20dp"
                    android:background="@drawable/add"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:contentDescription="@string/str_cancel_img_desc"
                    app:srcCompat="@drawable/cancel" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>