<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/id_img_h_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/str_h_logo_desc"
            app:srcCompat="@drawable/h" />

        <LinearLayout
            android:id="@+id/id_ll_sign_in"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:translationY="-100dp"
            android:scaleY="0"
            android:scaleX="0"
            android:alpha="0"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_img_username"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/str_username"
                    app:srcCompat="@drawable/username" />

                <EditText
                    android:id="@+id/id_edt_username"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/str_username"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#75212121"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_img_password"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/password"
                    android:contentDescription="@string/str_password" />

                <EditText
                    android:id="@+id/id_edt_password"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/str_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="#75212121"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/id_btn_sign_in"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:text="@string/str_sign_in"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/id_btn_sign_up"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:text="@string/str_sign_up"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/id_ll_sign_up"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:translationY="-425dp"
            android:scaleY="0"
            android:scaleX="0"
            android:alpha="0"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_img_reg_username"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/str_username"
                    app:srcCompat="@drawable/username" />

                <EditText
                    android:id="@+id/id_edt_reg_username"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/str_username"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#75212121"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_img_reg_password1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/str_password"
                    app:srcCompat="@drawable/password" />

                <EditText
                    android:id="@+id/id_edt_reg_password1"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/str_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="#75212121"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/id_img_reg_password2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/str_password2"
                    app:srcCompat="@drawable/password_check" />

                <EditText
                    android:id="@+id/id_edt_reg_password2"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/str_password2"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="#75212121"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>